# ASEM-Talint

./: .env.example  .gitignore  5ca69a43-c86e-4620-921e-32edce632915 (1)  ASEM-Centered GitHub Copilot Preprompt for Semiconductor Talent Pipeline Engineering.docx  Judge-Aligned GitHub Copilot Preprompt for a Z.AI-Centered UMHackathon Domain 2 Build.docx  README.md  UMHackathon 2026 Frequently Asked Questions.docx  UMHackathon2026 Judging Criteria.docx  UMHackathon2026 Official Handbook.docx  UMHackathon2026 Participant Handbook.docx  UMHackathon2026 Terms and Conditions.docx  deep-research-report (1).md  deep-research-report.md  generate_test_pdf.py  pyproject.toml  run_smoke_test.py
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  llm.instructions.md  qa.instructions.md
.github/prompts/: build-llm-provider.prompt.md  create-readme.prompt.md  draft-prd.prompt.md  draft-qatd.prompt.md  draft-sad.prompt.md  generate-tests.prompt.md  implement-zai-endpoint.prompt.md  package-submission.prompt.md  setup-ci-cd.prompt.md
Domain 2 (Participants)/: UMHackathon2026 Frequently Asked Questions.docx
data/official/: employer_demand_semicon.csv  semicon_hotspots.csv  wages_formal_mfg.csv
data/source_registry/: opendosm.registry.json  semicon_hotspots.registry.json
src/asem_talent/: __init__.py  app.py  config.py
submission/preliminary/: ASEM-Talint-10-minute-presentation.pptx  PRD.md  QATD.md  SAD.md  economic-theory-anchor.md  generate_pitch_deck.py  pitch-deck-outline.md  pitch-deck-script.md  submission-checklist.md  (+2 more)
tests/: conftest.py
(+36 files in other folders)
